--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.15",
     "@types/aos": "^3.0.4",
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
@@ -16,9 +17,14 @@
     "aos": "^3.0.0-beta.6",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "gray-matter": "^4.0.3",
+    "marked": "^9.1.6",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.4.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "sass": "^1.62.1",
     "scss": "^0.2.4",
     "typescript": "5.0.4"
