feat: Configure GitHub Pages deployment and static site generation

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "predeploy": "next build && mkdir -p out && touch out/.nojekyll",
+    "deploy": "gh-pages -d out",
     "lint": "next lint"
   },
   "dependencies": {
@@ -28,5 +30,8 @@
     "sass": "^1.62.1",
     "scss": "^0.2.4",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
