--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "npx serve@latest out",
-    "predeploy": "next build && mkdir -p out",
+    "start": "next start",
+    "prebuild": "tsx src/scripts/generate-posts.ts",
+    "predeploy": "next build && next export",
     "deploy": "gh-pages -d out",
     "lint": "next lint"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
     "@types/aos": "^3.0.4",
-    "@types/node": "20.1.3",
+    "@types/jsdom": "^21.1.7",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "aos": "^3.0.0-beta.6",
@@ -21,8 +22,10 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "gray-matter": "^4.0.3",
+    "jsdom": "^26.0.0",
     "marked": "^9.1.6",
     "next": "13.4.2",
+    "puppeteer": "^24.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.4.0",
@@ -33,7 +36,10 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/node": "^22.13.1",
     "gh-pages": "^6.3.0",
-    "serve": "^14.2.1"
+    "serve": "^14.2.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2"
   }
 }
