--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "gray-matter": "^4.0.3",
+    "i18next": "^24.2.2",
     "jsdom": "^26.0.0",
     "marked": "^9.1.6",
     "next": "13.4.2",
+    "next-i18next": "^15.4.2",
     "puppeteer": "^24.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
