--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "gray-matter": "^4.0.3",
-    "i18next": "^24.2.2",
+    "i18next": "^23.7.11",
+    "i18next-browser-languagedetector": "^7.2.0",
     "jsdom": "^26.0.0",
     "marked": "^9.1.6",
     "next": "13.4.2",
@@ -30,7 +31,7 @@
     "puppeteer": "^24.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-i18next": "^15.4.0",
+    "react-i18next": "^13.5.0",
     "react-icons": "^5.4.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
