--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prebuild": "tsx src/scripts/generate-posts.ts",
     "predeploy": "next build && next export",
     "deploy": "gh-pages -d out",
-    "lint": "next lint"
+    "lint": "next lint",
+    "convert:md": "tsx src/scripts/convert-markdowns.ts"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
@@ -24,6 +25,7 @@
     "gray-matter": "^4.0.3",
     "i18next": "^23.7.11",
     "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-resources-to-backend": "^1.2.1",
     "jsdom": "^26.0.0",
     "marked": "^9.1.6",
     "next": "13.4.2",
