--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-i18next": "^13.5.0",
     "react-icons": "^5.4.0",
     "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
     "sass": "^1.62.1",
     "scss": "^0.2.4",
