--- a/package.json
+++ b/package.json
@@ -34,12 +34,15 @@
     "react-dom": "18.2.0",
     "react-i18next": "^13.5.0",
     "react-icons": "^5.4.0",
+    "react-markdown": "^10.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
+    "remark-parse": "^11.0.0",
     "sass": "^1.62.1",
     "scss": "^0.2.4",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^22.13.1",
