--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@notionhq/client": "^2.2.15",
     "@types/aos": "^3.0.4",
     "@types/jsdom": "^21.1.7",
-    "@types/react": "18.2.6",
+    "@types/react": "^19.0.10",
     "@types/react-dom": "18.2.4",
+    "@types/react-icons": "^3.0.0",
     "aos": "^3.0.0-beta.6",
     "critters": "^0.0.25",
     "eslint": "8.40.0",
@@ -32,8 +33,9 @@
     "next-i18next": "^15.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^13.5.0",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-markdown": "^10.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
