feat: Implement a new admin dashboard with Lexical editor for post management and migrate post data to Supabase.

--- a/package.json
+++ b/package.json
@@ -6,14 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "serve out",
-    "prebuild": "tsx src/scripts/generate-posts.ts",
+    "prebuild": "tsx src/scripts/generate-posts-db.ts",
     "predeploy": "next build",
     "deploy": "gh-pages -d out",
     "lint": "next lint",
-    "convert:md": "tsx src/scripts/convert-markdowns.ts"
+    "convert:md": "tsx src/scripts/convert-markdowns.ts",
+    "migrate:db": "tsx src/scripts/migrate-to-supabase.ts",
+    "generate:db": "tsx src/scripts/generate-posts-db.ts"
   },
   "dependencies": {
+    "@lexical/code": "^0.40.0",
+    "@lexical/history": "^0.40.0",
+    "@lexical/link": "^0.40.0",
+    "@lexical/list": "^0.40.0",
+    "@lexical/markdown": "^0.40.0",
+    "@lexical/react": "^0.40.0",
+    "@lexical/rich-text": "^0.40.0",
+    "@lexical/selection": "^0.40.0",
+    "@lexical/table": "^0.40.0",
+    "@lexical/utils": "^0.40.0",
     "@notionhq/client": "^2.2.15",
+    "@supabase/supabase-js": "^2.95.3",
     "@types/aos": "^3.0.4",
     "@types/jsdom": "^21.1.7",
     "@types/react": "^19.0.10",
@@ -21,6 +34,7 @@
     "@types/react-icons": "^3.0.0",
     "aos": "^3.0.0-beta.6",
     "critters": "^0.0.25",
+    "dotenv": "^17.3.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "gray-matter": "^4.0.3",
@@ -28,6 +42,7 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-resources-to-backend": "^1.2.1",
     "jsdom": "^26.0.0",
+    "lexical": "^0.40.0",
     "marked": "^9.1.6",
     "next": "13.4.2",
     "next-i18next": "^15.4.2",
